--- a/package.json
+++ b/package.json
@@ -12,15 +12,26 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.1",
     "@mui/icons-material": "^5.14.3",
+    "@mui/lab": "^5.0.0-alpha.142",
     "@mui/material": "^5.14.5",
+    "@mui/styled-engine-sc": "^5.14.6",
+    "@mui/x-date-pickers": "^6.12.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
+    "i18next": "^23.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
+    "react-i18next": "^13.2.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
-    "sweetalert2": "^11.7.27"
+    "react-toastify": "^9.1.3",
+    "styled-components": "^6.0.7",
+    "sweetalert2": "^11.7.27",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
